--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -43,7 +43,7 @@
             name="password"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">SignUp</button>
       </form>
     </div>
     <%- include('./partials/script') %>
