--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,17 +3,38 @@
   <head>
     <%- include('./partials/head') %>
     <title>Homepage</title>
+    <style>
+      .card-container {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+      img {
+        max-height: 200px;
+      }
+      .card {
+        margin: 0 10px 20px 10px;
+      }
+    </style>
   </head>
   <body>
     <%- include('./partials/nav') %>
-    <div class="container mt-3">
+    <div class="container mt-3 card-container">
       <%blogs.forEach(blog => { %>
       <div class="card" style="width: 18rem">
+        <% if (blog.coverImageURL) { %>
         <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="..." />
+        <% }%>
         <div class="card-body">
-          <h5 class="card-title"><%= blog.title %></h5>
+          <h5 class="card-title">Title: <%= blog.title %></h5>
 
           <a href="/blog/<%=blog._id  %>" class="btn btn-primary">View</a>
+          <a
+            href="/blog/delete/<%=blog._id  %>"
+            data-method="delete"
+            class="btn btn-danger"
+            >Delete</a
+          >
         </div>
       </div>
 
