--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -30,7 +30,7 @@
             name="password"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">SignIn</button>
       </form>
     </div>
     <%- include('./partials/script') %>
