--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -38,6 +38,29 @@
           ></textarea>
         </div>
         <div class="mb-3">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="postvisiblity"
+              id="public"
+              value="public"
+            />
+            <label class="form-check-label" for="public"> Public </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="postvisiblity"
+              id="private"
+              value="private"
+              checked
+            />
+            <label class="form-check-label" for="private"> Private </label>
+          </div>
+        </div>
+        <div class="mb-3">
           <button class="btn btn-primary">Submit</button>
         </div>
       </form>
