--- a/views/allBlog.ejs
+++ b/views/allBlog.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('./partials/head') %>
-    <title>Homepage</title>
+    <title>All Blog</title>
     <style>
       .card-container {
         display: flex;
@@ -35,18 +35,12 @@
           <h5 class="card-title">Title: <%= blog.title %></h5>
 
           <a href="/blog/<%=blog._id  %>" class="btn btn-primary">View</a>
-
-          <% if (locals.user) { %> <% if (locals.user._id == blog.createdBy) {
-          %>
           <a
             href="/blog/delete/<%=blog._id  %>"
             data-method="delete"
             class="btn btn-danger"
             >Delete</a
           >
-
-          <% } %> <% } %>
-
           <span><%= blog. postvisiblity %></span>
         </div>
       </div>
