--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/blog/add-new">Add Blogs</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog/view-all">All Blogs</a>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
