--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -3,33 +3,70 @@
   <head>
     <%- include('./partials/head') %>
     <title>Blog</title>
+    <style>
+      .comment-del {
+        font-size: xx-small;
+        height: 27px;
+        margin-left: 61px;
+        margin-top: -24px;
+      }
+      .comment-cont {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column-reverse;
+      }
+    </style>
   </head>
   <body>
     <%- include('./partials/nav') %>
     <div class="container mt-4">
       <h1>Title: <%= blog.title %></h1>
       <img src="<%= blog.coverImageURL %>" width="400vw" alt="img" />
-      <h3><pre class="mt-3">Body: <%= blog.body %></pre>
-    </div></h3>
+      <h3><pre class="mt-3">Body: <%= blog.body %></pre></h3>
+    </div>
     <div class="container mt-4">
-        <img src="<%= blog.createdBy.profileImageUrl %>"  width="50px" > <%= blog.createdBy.fullName %>
+      <img src="<%= blog.createdBy.profileImageUrl %>" width="50px" /> <%=
+      blog.createdBy.fullName %>
     </div>
     <div class="container mt-4">
       <h1>Comment (<%= comments.length %>)</h1>
       <% if (locals.user) { %>
-       <form action="/blog/comment/<%=blog._id %>" method="post">
+      <form action="/blog/comment/<%=blog._id %>" method="post">
         <div class="mb-3">
-          <input type="text" class="form-control" id="content" name="content" placeholder="Enter your comment"/>
-          <button class="btn btn-sm btn-primary" type="submit">Add Comment</button>
+          <input
+            type="text"
+            class="form-control"
+            id="content"
+            name="content"
+            placeholder="Enter your comment"
+          />
+          <button class="btn btn-sm btn-primary" type="submit">
+            Add Comment
+          </button>
         </div>
       </form>
       <% } %>
-      <div class="container mt-5">
+      <div class="container mt-5 comment-cont">
         <% comments.forEach(comment => { %>
-         <div>
-          <img src="<%= comment.createdBy.profileImageUrl %>"  width="50px" > <%= comment.createdBy.fullName %>
-          <pre style="margin-left: 60px;"><h5><%= comment.content %></h5></pre>
-         </div>
+        <div>
+          <img src="<%= comment.createdBy.profileImageUrl %>" width="50px" />
+          <%= comment.createdBy.fullName %>
+          <pre style="margin-left: 60px"><h5><%= comment.content %></h5></pre>
+          <% if (locals.user ) { %> <% if (locals.user._id ==
+          comment.createdBy._id || locals.user._id == blog.createdBy._id ) { %>
+
+          <div>
+            <a
+              href="/blog/delete/comment/<%=comment._id%>"
+              data-method="delete"
+              class="btn btn-danger comment-del"
+              >Delete</a
+            >
+          </div>
+
+          <% } %> <% } %>
+        </div>
+
         <% }) %>
       </div>
     </div>
