--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,3 +6,8 @@
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
   crossorigin="anonymous"
 />
+<link
+  rel="shortcut icon"
+  href="../../public/images/icons8-blog.svg"
+  type="image/x-icon"
+/>
