--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,6 @@
 />
 <link
   rel="shortcut icon"
-  href="../../public/images/icons8-blog.svg"
+  href="../../public/images/icons8-blog-64.png"
   type="image/x-icon"
 />
