--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
   crossorigin="anonymous"
 />
 <link
-  rel="shortcut icon"
+  rel="icon"
   href="../../public/images/icons8-blog-64.png"
   type="image/x-icon"
 />
