--- a/views/allBlog.ejs
+++ b/views/allBlog.ejs
@@ -33,10 +33,10 @@
         margin-block: 3rem;
       }
       .next {
-        margin-inline: 36rem;
+        margin-left: 0rem;
       }
       .prev {
-        margin-inline: 31rem;
+        margin-right: 66rem;
       }
       .title {
         overflow: hidden;
