--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,10 +33,10 @@
         margin-block: 3rem;
       }
       .next {
-        margin-inline: 35rem;
+        margin-left: 0rem;
       }
       .prev {
-        margin-inline: 31rem;
+        margin-right: 66rem;
       }
       .title {
         overflow: hidden;
@@ -84,24 +84,6 @@
     </div>
 
     <!-- pagination -->
-    <nav aria-label="Page navigation example" class="pagination">
-      <ul class="pagination">
-        <li class="page-item prev">
-          <a
-            class="page-link"
-            href="/blog/page?page=<%= page-1 %>&limit=<%= limit %>"
-            >Previous</a
-          >
-        </li>
-        <li class="page-item next">
-          <a
-            class="page-link"
-            href="/blog/page?page=<%= page+1 %>&limit=<%= limit %>"
-            >Next</a
-          >
-        </li>
-      </ul>
-    </nav>
-    <%-include('./partials/script') %>
+    <%- include("./partials/pagination") %> <%-include('./partials/script') %>
   </body>
 </html>
