--- a/views/allBlog.ejs
+++ b/views/allBlog.ejs
@@ -47,7 +47,7 @@
     </style>
   </head>
   <body>
-    <%- include('./partials/nav') %>
+    <%- include('./search') %>
     <div class="container mt-3 card-container">
       <%blogs.forEach(blog => { %>
       <div class="card" style="width: 18rem">
